apps/production/monitoring/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-auth
  namespace: production
spec:
  basicAuth:
    secret: loki-creds
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitor-redirect
  namespace: production
spec:
  redirectRegex:
    regex: "^https://monitor\\.tahmid\\.io/(.*)"
    replacement: "https://grafana.tahmid.io/${1}"
    permanent: true
